Programmatic stack deployments, custom docker images, cgroups memory limits